--- a/css/styles.css
+++ b/css/styles.css
@@ -359,7 +359,7 @@ footer .fab + .fab {
   margin-left: 10px;
 }
 .footer-bottom {
-  background-color: #1f2c5f;
+  background-color: #001332;
   font-size: 14px;
   margin-top: 90px;
 }
