--- a/css/styles.css
+++ b/css/styles.css
@@ -265,6 +265,9 @@ grid-template-columns: repeat(8, 1fr);
   border: 4px solid var(--yellow);
   padding: 4px;
 }
+.navbar-nav ul li {
+  display: inline-block; 
+}
 
 /************************************
 * HOME
