--- a/css/styles.css
+++ b/css/styles.css
@@ -265,7 +265,7 @@ grid-template-columns: repeat(8, 1fr);
   border: 4px solid var(--yellow);
   padding: 4px;
 }
-.navbar-nav ul li {
+.navbar-nav li {
   display: inline-block; 
 }
 
