--- a/css/styles.css
+++ b/css/styles.css
@@ -265,8 +265,12 @@ grid-template-columns: repeat(8, 1fr);
   border: 4px solid var(--yellow);
   padding: 4px;
 }
-.navbar-nav li {
-  display: inline-block; 
+.navbar-nav {
+  justify-content: center;
+  flex-direction: row;
+}
+.navbar-nav  li + li {
+  margin-left: 20px; 
 }
 
 /************************************
