--- a/css/styles.css
+++ b/css/styles.css
@@ -265,6 +265,7 @@ grid-template-columns: repeat(8, 1fr);
   border: 4px solid var(--yellow);
   padding: 4px;
 }
+/* display bootstraps nav links in a row instead of a column */
 .navbar-nav {
   justify-content: center;
   flex-direction: row;
